--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
 
-    <title>Leitor Google Acadêmico</title>
+    <title>VisSE</title>
 
 </head>
 <body>
